<package>
  <name>p3at_navigation</name>
  <version>0.1.0</version>
  <description>
      A launch files and configuration files to control Pioneer robot
  </description>
  <maintainer email="gloriaberaldo@gmail.com">Gloria Beraldo</maintainer>
  <license>BSD</license>

  <author>Gloria Beraldo</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>clear_costmap_recovery</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>openni2_launch</run_depend>
  <run_depend>depthimage_to_laserscan</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>message_generation</run_depend>
</package>



